--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,7 +1,7 @@
 .btn-pink {
-	background-color: #7B2B8D;
+	background-color: pink;
 	padding: 15px 20px;
 	border-radius: 4px;
-	color: white;
+	color: black;
 	font-weight: bold;
 }
